# rosbag_converter

./: README.md
python/: README.md  pyproject.toml
python/rosbag_converter/datasets/: convert_bag.py  kitti.py  ros.py
python/rosbag_converter/tools/: __init__.py  comp_image.py  run.py
